--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+  <div class="header">
+    <div class="logo logo__place_header"></div>
 
+  </div>
   </div>
 </body>
 </html>
