--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
     <div class="footer__column_content_social">
       <h5 class="footer__column-heading">Соцсети</h5>
       <ul class="footer__column-links">
-        <li><a href=# class="footer__social-icon"><img src="/images/facebook_color_white.svg" alt="logo"></a><a href=# class="footer__column-link">Facebook</a></li>
-        <li><a href=# class="footer__social-icon"><img src="/images/vk_color_white.svg" alt="logo"></a><a href=# class="footer__column-link">ВКонтакте</a></li>
-        <li><a href=# class="footer__social-icon"><img src="/images/instagram_color_white.svg" alt="logo"></a><a href=# class="footer__column-link">Instagram</a></li>
+        <li><a href=# class="footer__social-icon"><img src="/images/facebook_color_white.svg" alt="Лого"></a><a href=# class="footer__column-link">Facebook</a></li>
+        <li><a href=# class="footer__social-icon"><img src="/images/vk_color_white.svg" alt="Лого"></a><a href=# class="footer__column-link">ВКонтакте</a></li>
+        <li><a href=# class="footer__social-icon"><img src="/images/instagram_color_white.svg" alt="Лого"></a><a href=# class="footer__column-link">Instagram</a></li>
       </ul>
     </div>
   </div>
