--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/normalize.css" />
-  <link rel="stylesheet" href="styles/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="styles/normalize.css"/>
+  <link rel="stylesheet" href="styles/style.css"/>
   <title>Научиться учиться</title>
-</head>
+  </head>
 
 <body>
   <div class="page">
@@ -18,7 +18,7 @@
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать →</a>
       </p>
-      <img src="images/header-image.png" alt="Картина опять двойка" class="header__main-illustration" />
+      <img src="images/header-image.png" alt="Картина опять двойка" class="header__main-illustration"/>
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -37,6 +37,70 @@
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item"><img src="images/cards-attention.png" alt="Книга в руках" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
+          </li>
+          <li class="cards__item"><img src="images/cards-recall.png" alt="Статуя" class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item"><img src="images/cards-interliving.png" alt="Зал с людьми" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item"><img src="images/cards-question.png" alt="Человек в комнате" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
+          </li>
+          <li class="cards__item"><img src="images/cards-competence.png" alt="Стопка книг" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
+          </li>
+          <li class="cards__item">
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316"
+            src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316"
+            src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не
+              самым умным. В
+              армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но
+              для
+              продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным
+              наукам. Оказалось,
+              если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
+              первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее →</a>
+        <img src="images/feynman.png" alt="Портрет Фейнмана" class="feyman__main-illustration"/>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -78,11 +142,22 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее →</a>
-        <img src="images/feynman.png" alt="Портрет Фейнмана" class="feyman__main-illustration" />
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу
+            «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
+            навыки и
+            знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="images/khan-book.jpg" alt="Книга Салмана Хана" class="khan__book-pic">
+            <a href="#" class="khan__buy-link">Купить книгу →</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -127,10 +202,24 @@
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
-              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
         <div class="kaufman__triangle"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li><a href=# class="resources__link"><img src="images/logo/resources-arzamas.svg" alt="на сайт Арзамас"
+                class="resources__logo"></a></li>
+          <li><a href=# class="resources__link"><img src="images/logo/resources-n1.svg" alt="на сайт Эн плюс 1"
+                class="resources__logo"></a></li>
+          <li><a href=# class="resources__link"><img src="images/logo/resources-strelka.svg" alt="на сайт Стрелка"
+                class="resources__logo"></a></li>
+          <li><a href=# class="resources__link"><img src="images/logo/resources-polka.svg" alt="на сайт Полка"
+                class="resources__logo"></a></li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
@@ -152,15 +241,15 @@
           <ul class="footer__column-links">
             <li>
               <a href=# class="footer__column-link"><img src="images/facebook_color_white.svg" alt="Лого"
-                  class="footer__social-icon" />Facebook</a>
+                  class="footer__social-icon"/>Facebook</a>
             </li>
             <li>
               <a href=# class="footer__column-link"><img src="images/vk_color_white.svg" alt="Лого"
-                  class="footer__social-icon" />ВКонтакте</a>
+                  class="footer__social-icon"/>ВКонтакте</a>
             </li>
             <li>
               <a href=# class="footer__column-link"><img src="images/instagram_color_white.svg" alt="Лого"
-                  class="footer__social-icon" />Instagram</a>
+                 class="footer__social-icon"/>Instagram</a>
             </li>
           </ul>
         </nav>
