--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
-  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./blocks/page/index.css">
   <title>Научиться учиться</title>
   </head>
 
@@ -22,7 +21,7 @@
       <div class="rotation header__square-pic"></div>
     </header>
     <main class="content">
-      <article class="description" aria-label="Главные проблемы в обучении">
+      <section class="description" aria-label="Главные проблемы в обучении">
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -37,7 +36,7 @@
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </article>
-      </article>
+      </section>
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
@@ -80,7 +79,7 @@
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
-      <article class="oakley" aria-label="История Барбары Оакли">
+      <section class="oakley" aria-label="История Барбары Оакли">
         <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
@@ -96,7 +95,7 @@
             </p>
           </div>
         </article>
-      </article>
+      </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
